Fix DT sorting arrows to look nicer when labels wrap onto two lines

--- a/stylesheets/_component.datatables.scss
+++ b/stylesheets/_component.datatables.scss
@@ -98,9 +98,9 @@ a.dt-button {
         &.sorting_desc::after {
             @include icon-FontAwesome();
             font-size: $font-size-base;
+            line-height: 22px;
             position: absolute;
             right: 5px;
-            top: 30%;
         }
 
         &.sorting::after {
